--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
-[package]
-name = "simple_aritmatic_machine"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-pest = "2.1.3"
-pest_derive = "2.1.0"
-rustyline = "9.1.2"
-nu-ansi-term = "0.42.0"
+members = [
+    "sam_binary",
+    "sam_library"
+]
