--- a/sam_interpreter/Cargo.toml
+++ b/sam_interpreter/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sam_library = { path = "../sam_library" }
+sam_library = { path = "../sam_interpreter_lib" }
 rustyline = "9.1.2"
 nu-ansi-term = "0.42.0"
+clap = { version = "3.0.13", features = ["derive"] }
