--- a/sam_interpreter_lib/Cargo.toml
+++ b/sam_interpreter_lib/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 pest = "2.1.3"
 pest_derive = "2.1.0"
+nalgebra = "0.30.1"
+num-rational = "0.4.0"
+num-complex = "0.4.0"
